--- a/datasets/config_templates/torch_serve_config.yaml
+++ b/datasets/config_templates/torch_serve_config.yaml
@@ -30,5 +30,6 @@ plugin_options:
   api: "predict"
   custom_headers: {"Host": "llmtorch-predictor.default.svc.cluster.local"}
   proxies: {}
+  timeout_sec: 300
 extra_metadata:
   replicas: 1
